# brickers-ai

./: .dockerignore  .gitignore  3-5_1.ldr  Dockerfile  Dockerfile.base  Dockerfile.brickjudge  Dockerfile.minimal  README.md  app.py  brick_judge_rs.py  build.sh  check_pdf_images.py  config.py  db.py  debug_output_300.txt  docker-compose.yml  inspect_genai.py  inspect_image_config.py  main.py  make_test_pdf.py  output_test.ldr  reproduce_bg.py  reproduction_script.py  requirements.txt  ruff.toml  test_1x1_ban.py  test_agent.py  test_engine_logs.py  test_headless_render.py  test_log_fetch.py  test_result.ldr  verify_concurrency.py
admin_analyst/: __init__.py  graph.py  intelligence_service.py  llm_utils.py  nodes.py  prompts.py  state.py
blueprint/: .env.example  Dockerfile  app.py  docker-compose.yml  main.py  requirements.txt  sqs_consumer.py
brick-engine/: glb_to_ldr_embedded.py
brick_engine/: glb_to_ldr_embedded.py
brick_judge/: README.md  __init__.py  brick_judge_viewer.html  openapi.json  parser.py  server.py  test_llm_tool.py
brick_judge/rust/: Cargo.toml  pyproject.toml
brick_judge/rust/src/: judge.rs  lib.rs  stability.rs  types.rs
chat/: memory.py  router.py  schemas.py  service.py
demo/: brick_judge_viewer.html
docs/: final_work_evidence_summary.md  legacy_code_deep_dive.md  physics_ai_free_stack.md  pybullet_implementation_design.md  trial_and_error_report.md
ldr/: bom.py  colors.py  import_to_mongo.py  step_bom.py
physical_verification/: __init__.py  db.py  debug_ldr.py  glb_to_ldr_quick.py  ldr_loader.py  ldr_to_mesh.py  lego_physics.py  (+12 more)
(+190 files in other folders)
