[package]
name = "brick_judge_rs"
version = "0.1.0"
edition = "2021"
description = "High-performance physics validation for LEGO brick models"
license = "MIT"

[lib]
name = "brick_judge_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
